name:                PolyML
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/PolyML#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lexer
                     , Syntax
                     , Parser
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 5.0 && < 5.2
                     , text >= 1.2 && < 1.3
  default-language:    Haskell2010

executable PolyML-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , PolyML
                     , megaparsec >= 5.0 && < 5.2
                     , text >= 1.2 && < 1.3
  default-language:    Haskell2010

test-suite PolyML-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , PolyML
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/PolyML
